hphp/test/slow/hack_mode/closing-tag-script.php.expectf
Fatal error: syntax error, unexpected T_HH_ERROR, expecting $end in %s/test/slow/hack_mode/closing-tag-script.php on line 2